# yact

./: .gitignore  LICENSE  README.md  build.sh  install.sh  uninstall.sh
commands/: yact.yaml
src/: source-yact.sh  yact-debug-logger.sh  yact_template.sh
yact_colorlizer/: Cargo.toml
yact_colorlizer/src/: main.rs
yact_core/: Cargo.toml  log  note.md
yact_core/resources/: commands.yaml  no_param_completion_test.yaml  root_command.yaml  root_plain_text.yaml
yact_core/src/: lib.rs  main.rs
yact_core/src/yact_processor/: command_extractor.rs  command_traverser.rs  complition_command_extractor.rs  extractor_util.rs  mod.rs  processor.rs  special_operation.rs  special_operation_processor.rs  utils.rs  yact_constants.rs
yact_core/src/yact_processor/tests/: argument_tests.rs  basic_tests.rs  completion_tests.rs  mod.rs  operation_tests.rs  operation_with_temp_file_tests.rs
