[package]
name = "yact_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = "1.0"
serde_yaml = "0.8"
regex = "1"
base64 = "0.13"
tempfile = "3.2"
log = "0.4"
env_logger = "0.9"
ascii_tree = "0.1.1"